--- a/Team_Game.vcxproj
+++ b/Team_Game.vcxproj
@@ -165,6 +165,14 @@
     <ClCompile Include="object3D.cpp" />
     <ClCompile Include="objectbillboard.cpp" />
     <ClCompile Include="objectX.cpp" />
+    <ClCompile Include="pause.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="pausemanager.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -192,6 +200,8 @@
     <ClInclude Include="object3D.h" />
     <ClInclude Include="objectbillboard.h" />
     <ClInclude Include="objectX.h" />
+    <ClInclude Include="pause.h" />
+    <ClInclude Include="pausemanager.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="playermanager.h" />
