--- a/Team_Game.vcxproj
+++ b/Team_Game.vcxproj
@@ -153,6 +153,8 @@
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="character.cpp" />
     <ClCompile Include="debugproc.cpp" />
+    <ClCompile Include="fade.cpp" />
+    <ClCompile Include="game.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="light.cpp" />
     <ClCompile Include="main.cpp" />
@@ -180,13 +182,20 @@
     <ClCompile Include="player.cpp" />
     <ClCompile Include="playermanager.cpp" />
     <ClCompile Include="renderer.cpp" />
+    <ClCompile Include="scene.cpp" />
     <ClCompile Include="sound.cpp" />
     <ClCompile Include="texturemanager.cpp" />
+    <ClCompile Include="title.cpp" />
+    <ClCompile Include="titleLogo.cpp" />
+    <ClCompile Include="titlemanager.cpp" />
+    <ClCompile Include="titlemenu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h" />
     <ClInclude Include="character.h" />
     <ClInclude Include="debugproc.h" />
+    <ClInclude Include="fade.h" />
+    <ClInclude Include="game.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="light.h" />
     <ClInclude Include="main.h" />
@@ -207,8 +216,13 @@
     <ClInclude Include="playermanager.h" />
     <ClInclude Include="renderer.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="scene.h" />
     <ClInclude Include="sound.h" />
     <ClInclude Include="texturemanager.h" />
+    <ClInclude Include="title.h" />
+    <ClInclude Include="titlelogo.h" />
+    <ClInclude Include="titlemanager.h" />
+    <ClInclude Include="titlemenu.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Team_Game.rc" />
