--- a/Team_Game.vcxproj
+++ b/Team_Game.vcxproj
@@ -198,6 +198,7 @@
     <ClCompile Include="titleLogo.cpp" />
     <ClCompile Include="titlemanager.cpp" />
     <ClCompile Include="titlemenu.cpp" />
+    <ClCompile Include="uplift.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h" />
@@ -233,6 +234,7 @@
     <ClInclude Include="titlelogo.h" />
     <ClInclude Include="titlemanager.h" />
     <ClInclude Include="titlemenu.h" />
+    <ClInclude Include="uplift.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Team_Game.rc" />
