--- a/Team_Game.vcxproj
+++ b/Team_Game.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="modelmanager.cpp" />
     <ClCompile Include="motion.cpp" />
     <ClCompile Include="navi.cpp" />
+    <ClCompile Include="naviUi.cpp" />
     <ClCompile Include="object.cpp" />
     <ClCompile Include="object2D.cpp" />
     <ClCompile Include="object3D.cpp" />
@@ -218,6 +219,7 @@
     <ClInclude Include="modelmanager.h" />
     <ClInclude Include="motion.h" />
     <ClInclude Include="navi.h" />
+    <ClInclude Include="naviUi.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="object2D.h" />
     <ClInclude Include="object3D.h" />
