--- a/Team_Game.vcxproj.filters
+++ b/Team_Game.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClCompile Include="block.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="naviMarker.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h">
@@ -236,7 +239,10 @@
     <ClInclude Include="naviUi.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-        <ClInclude Include="block.h">
+    <ClInclude Include="block.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="naviMarker.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
