--- a/Team_Game.vcxproj
+++ b/Team_Game.vcxproj
@@ -202,6 +202,7 @@
     <ClCompile Include="player.cpp" />
     <ClCompile Include="playermanager.cpp" />
     <ClCompile Include="renderer.cpp" />
+    <ClCompile Include="result.cpp" />
     <ClCompile Include="scene.cpp" />
     <ClCompile Include="sound.cpp" />
     <ClCompile Include="texturemanager.cpp" />
@@ -246,6 +247,7 @@
     <ClInclude Include="playermanager.h" />
     <ClInclude Include="renderer.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="result.h" />
     <ClInclude Include="scene.h" />
     <ClInclude Include="sound.h" />
     <ClInclude Include="texturemanager.h" />
