--- a/Team_Game.vcxproj
+++ b/Team_Game.vcxproj
@@ -201,6 +201,8 @@
     </ClCompile>
     <ClCompile Include="player.cpp" />
     <ClCompile Include="playermanager.cpp" />
+    <ClCompile Include="ranking.cpp" />
+    <ClCompile Include="rankingmanager.cpp" />
     <ClCompile Include="renderer.cpp" />
     <ClCompile Include="result.cpp" />
     <ClCompile Include="scene.cpp" />
@@ -245,6 +247,8 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="playermanager.h" />
+    <ClInclude Include="ranking.h" />
+    <ClInclude Include="rankingmanager.h" />
     <ClInclude Include="renderer.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="result.h" />
