--- a/Team_Game.vcxproj.filters
+++ b/Team_Game.vcxproj.filters
@@ -140,7 +140,7 @@
       <Filter>ソース</Filter>
     </ClCompile>
     <ClCompile Include="switch.cpp">
-      <Filter>ヘッダー</Filter>
+      <Filter>ソース</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
