--- a/Team_Game.vcxproj.filters
+++ b/Team_Game.vcxproj.filters
@@ -335,4 +335,9 @@
       <Filter>リソース</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="data\CURSOR\Test.cur">
+      <Filter>リソース</Filter>
+    </None>
+  </ItemGroup>
 </Project>
