--- a/Team_Game.vcxproj
+++ b/Team_Game.vcxproj
@@ -287,6 +287,9 @@
   <ItemGroup>
     <Image Include="data\ICON\Test.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="data\CURSOR\Test.cur" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
