タイトル背景追加

--- a/Team_Game.vcxproj.filters
+++ b/Team_Game.vcxproj.filters
@@ -160,6 +160,7 @@
     <ClCompile Include="climb.cpp">
       <Filter>ソース</Filter>
     </ClCompile>
+    <ClCompile Include="titlebg.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arrow.h">
@@ -333,6 +334,7 @@
     <ClInclude Include="climb.h">
       <Filter>ヘッダー</Filter>
     </ClInclude>
+    <ClInclude Include="titlebg.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソース">
