--- a/Team_Game.vcxproj
+++ b/Team_Game.vcxproj
@@ -219,6 +219,7 @@
     <ClCompile Include="texturemanager.cpp" />
     <ClCompile Include="timer.cpp" />
     <ClCompile Include="title.cpp" />
+    <ClCompile Include="titlebg.cpp" />
     <ClCompile Include="titleLogo.cpp" />
     <ClCompile Include="titlemanager.cpp" />
     <ClCompile Include="titlemenu.cpp" />
@@ -278,6 +279,7 @@
     <ClInclude Include="texturemanager.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="title.h" />
+    <ClInclude Include="titlebg.h" />
     <ClInclude Include="titlelogo.h" />
     <ClInclude Include="titlemanager.h" />
     <ClInclude Include="titlemenu.h" />
