--- a/Team_Game.vcxproj.filters
+++ b/Team_Game.vcxproj.filters
@@ -163,6 +163,8 @@
     <ClCompile Include="titlebg.cpp">
       <Filter>ソース</Filter>
     </ClCompile>
+    <ClCompile Include="effect3d.cpp" />
+    <ClCompile Include="particle3d.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arrow.h">
@@ -339,6 +341,8 @@
     <ClInclude Include="titlebg.h">
       <Filter>ヘッダー</Filter>
     </ClInclude>
+    <ClInclude Include="effect3d.h" />
+    <ClInclude Include="particle3d.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソース">
