--- a/Team_Game.vcxproj.filters
+++ b/Team_Game.vcxproj.filters
@@ -163,8 +163,10 @@
     <ClCompile Include="titlebg.cpp">
       <Filter>ソース</Filter>
     </ClCompile>
-    <ClCompile Include="effect3d.cpp" />
     <ClCompile Include="particle3d.cpp" />
+    <ClCompile Include="effect3d.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arrow.h">
@@ -341,8 +343,12 @@
     <ClInclude Include="titlebg.h">
       <Filter>ヘッダー</Filter>
     </ClInclude>
-    <ClInclude Include="effect3d.h" />
-    <ClInclude Include="particle3d.h" />
+    <ClInclude Include="particle3d.h">
+      <Filter>ヘッダー</Filter>
+    </ClInclude>
+    <ClInclude Include="effect3d.h">
+      <Filter>ヘッダー</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソース">
