--- a/Team_Game.vcxproj.filters
+++ b/Team_Game.vcxproj.filters
@@ -378,4 +378,7 @@
       <Filter>リソース</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="app.manifest" />
+  </ItemGroup>
 </Project>
